# core-rust

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  env_example  railway.toml
migrations/: 001_create_users.down.sql  001_create_users.up.sql  002_create_life_stories.down.sql  002_create_life_stories.up.sql  003_create_routines_and_photos.down.sql  003_create_routines_and_photos.up.sql  004_create_decisions.down.sql  004_create_decisions.up.sql  005_create_simulations.down.sql  005_create_simulations.up.sql  006_create_media.down.sql  006_create_media.up.sql  007_create_dashboard_snapshots.down.sql  007_create_dashboard_snapshots.up.sql  008_sync_auth_users.up.sql  009_add_life_state_snapshot.down.sql  009_add_life_state_snapshot.up.sql  010_add_mc_output.down.sql  010_add_mc_output.up.sql  011_add_confidence_score.down.sql  011_add_confidence_score.up.sql  012_add_suggested_first_decision.up.sql  013_add_share_token.down.sql  013_add_share_token.up.sql  014_create_subscriptions.down.sql  014_create_subscriptions.up.sql  015_add_decision_category.down.sql  015_add_decision_category.up.sql  016_create_waitlist.down.sql  016_create_waitlist.up.sql  017_create_vault.down.sql  017_create_vault.up.sql  018_add_behavioral_profile.down.sql  018_add_behavioral_profile.up.sql  019_add_financial_profile_fields.down.sql  019_add_financial_profile_fields.up.sql  020_add_liquid_net_worth_source.down.sql  020_add_liquid_net_worth_source.up.sql  021_add_life_context_onboarding.down.sql  021_add_life_context_onboarding.up.sql  (+73 more)
src/: app_state.rs  billing.rs  causalgraph.rs  config.rs  db.rs  error.rs  financial.rs  flash.rs  lib.rs  logging.rs  main.rs  media.rs  middleware.rs  models.rs  objectstore.rs  prompts.rs  router.rs  utils.rs
supabase/: config.toml
templates/: assumption_calibration.tmpl  assumption_extraction.tmpl  cinematic_prompt.tmpl  clarifying_questions_v2.tmpl  dashboard.tmpl  life_state_extraction.tmpl  onboarding_questions.tmpl  shared.tmpl  (+4 more)
(+28 files in other folders)
